@@ -1,6 +1,8 @@
 v0.7 - Pending
+	+ Display animated images
 	+ Set go navigation items' sensitivity based on context
 	+ Image wrapping options: yes/no/prompt (Bjoern Martensen)
+	+ Cleaned up menubar
 	+ Bug: 1:1 images are sometimes incorrectly set to fit (Bjoern Martensen)
 	+ Other bugfixes, interface tweaks
 
